Reorganization of folders

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,12 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94365925-7904-4333-9db7-5c15b3a95ae5",
+   "execution_count": 1,
+   "id": "158229e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling MaximumEntropy [3009f659-cc7f-4c8f-93f4-1926c60516fb] (cache misses: include_dependency fsize change (2), dep missing source (2), include_dependency fhash change (2))\n",
+      "\n",
+      "SYSTEM: caught exception of type :MethodError while trying to print a failed Task notice; giving up\n",
+      "WARNING: Method definition distr_function(Any, Fluidum.CartesianDiscretization{N_dim, Sizes, Lengths, DXS, T} where T where DXS where Lengths where Sizes where N_dim, Any, Any) in module MaximumEntropy at c:\\Users\\rossy\\.julia\\dev\\MaximumEntropy\\src\\maximum_entropy_LF.jl:124 overwritten at c:\\Users\\rossy\\.julia\\dev\\MaximumEntropy\\src\\maximum_entropy_LF.jl:317.\n",
+      "ERROR: Method overwriting is not permitted during Module precompilation. Use `__precompile__(false)` to opt-out of precompilation.\n",
+      "\u001b[36m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mSkipping precompilation due to precompilable error. Importing MaximumEntropy [3009f659-cc7f-4c8f-93f4-1926c60516fb].\n",
+      "\u001b[36m\u001b[1m└ \u001b[22m\u001b[39m  exception = Error when precompiling module, potentially caused by a __precompile__(false) declaration in the module.\n"
+     ]
+    }
+   ],
    "source": [
-    "using Fluidum\n",
     "using MaximumEntropy"
    ]
   },
@@ -18,6 +31,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "gpp = -u[2]^2*(g1+g2)*(mt*cosh(etap-eta))^2-2*u[1]*u[2]*(g1+g2)*mt*pt*cosh(etap-eta)*cos(phip-phi)-u[1]^2*(g1+g2)*(pt*cos(phip-phi))^2\n",
+    "ur = 0.1\n",
+    "etap=0.0\n",
+    "phip=0.0\n",
+    "m = 0.5\n",
+    "mult_E=1.0\n",
+    "eta = 0.0\n",
+    "phi = 0.0\n",
+    "        \n",
+    "mult_P=1.0\n",
+    "pt=2.0\n",
+    "mult_shear=1.0\n",
+    "g1= 0.1\n",
+    "g2 =0.1\n",
+    "\n",
+    "\n",
+    "energy_density(ur,m,mult_E,mult_P)[1]\n",
+    "shear(ur,m,mult_E,mult_P,g1,g2)[1][1]\n",
+    "shear(ur,m,mult_E,mult_P,g1,g2)[2][1]\n",
+    "shear(ur,m,mult_E,mult_P,g1,g2)\n",
+    "\n",
+    "\n",
+    "@show res(2)[:]\n",
+    "sol1,sol2=distr_function(resultNofo1,discretization,1.0,fluidproperty)\n",
+    "sol1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9492f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89427a6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "#define the grid\n",
     "rmax = 30;\n",
     "gridpoints=400;\n",
@@ -106,15 +163,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.3",
+   "display_name": "Julia 1.12.1",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.3"
+   "version": "1.12.1"
   }
  },
  "nbformat": 4,
